# network-protocol

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: API.md  BENCHMARKS.md  GUIDELINES.md  PERFORMANCE.md  PLANS.md  PRINCIPLES.md  README.md  TODO.md
docs/examples/: example_config.toml
docs/notes/: zero-copy.md
src/: config.rs  error.rs  lib.rs  main.rs
src/core/: codec.rs  packet.rs
src/protocol/: dispatcher.rs  handshake.rs  heartbeat.rs  keepalive.rs  message.rs  mod.rs  tests.rs  tests.rs.bak
src/service/: client.rs  daemon.rs  mod.rs  secure.rs  tls_client.rs  tls_daemon.rs
src/transport/: cluster.rs  local.rs  mod.rs  remote.rs  tls.rs
src/utils/: compression.rs  crypto.rs  logging.rs  mod.rs  time.rs  timeout.rs
tests/: backpressure.rs  config_test.rs  dispatcher_bench.rs  integration.rs  perf.rs  shutdown.rs  test_cert.pem  test_key.pem  test_utils.rs  timeouts.rs  tls.rs
