[package]
name = "network-protocol"
version = "0.8.0"

edition = "2021"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"

authors = [
    "James Gober <code@jamesgober.dev>"
]

description = "Secure, high-performance protocol core for Rust applications and services."
keywords = [
    "network", 
    "protocol", 
    "secure", 
    "transport", 
    "messaging"
]
categories = [
    "network-programming", 
    "asynchronous",
    "cryptography"
]
documentation = "https://docs.rs/network-protocol"
repository = "https://github.com/jamesgober/network-protocol"
homepage = "https://github.com/jamesgober/network-protocol"



[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.38", features = ["net", "io-util", "macros", "rt-multi-thread", "fs"] }

futures = "0.3"

chacha20poly1305 = { version = "0.10", features = ["std"] }
tracing = "0.1"

getrandom = "0.3.3"
rand = "0.9"

bincode = "1.3"
bytes = "1.5"

lz4_flex = "0.11.5"
zstd = "0.13"